--- a/notebooks/district_35.qmd
+++ b/notebooks/district_35.qmd
@@ -85,13 +85,13 @@ wp_cols = [col for col in wp_cols if col not in to_remove]
 
 The 2021 Democratic primary in Brooklyn’s 35th City Council district offered an excellent view of a rivalry central to NYC progressive politics. Crystal Hudson, aide to the former city council woman Laurie Cuombo and endorsed by U.S. Congressman Hakim Jeffries, Brooklyn’s lead antagonist to the DSA, squared off against Michael Hollingsworth, the DSA-endorsed socialist running proudly as an anti-system political outsider. The two feuded over their insider/outsider status, disagreeing on whether it was possible to enact meaningful political change without disrupting the political status quo. Despite this rhetorical disagreement, the two shared much ideological space, agreeing generally on defunding the NYPD, opposing rezoning in the 35th, and enacting a more redistributive city budget.
 
-They were running in a district that is more diverse than others by several metrics as well as being animated by the current changes in NYC demographics and politics. In the end, Hudson won the Democratic primary and general election by successfully 1) winning over the district’s large Hasidic population, 2) pulling key blocs of DSA support away from Hollingsworth in the more affluent western section of the district, and 3) raising more funds than Hollingsworth in wealthier areas of Brooklyn, inside and outside the district.
+They were running in a district that is more diverse than others by several metrics as well as being animated by the current changes in NYC demographics and politics. In the end, Hudson won the Democratic primary and general election by successfully 1) winning over the district’s large Hasidic population, 2) pulling key blocs of DSA support away from Hollingsworth in the whiter, more affluent, and more professional western section of the district, and 3) raising more funds than Hollingsworth in wealthier areas of Brooklyn, inside and outside the district.
 
 This contest between left-leaning rivals foregrounded important questions about the pragmatics of progressive coalition formation, including how two very closely related ideological strands related to each other, the relative importance of different endorsements and political networks, how left candidates should deal with large but minority conservative voting blocs, the demographic limits of support for the DSA, and the relative importance of ideology relative to political brand. This chapter will examine the district, the candidates, the campaign, and then compare the results with two relevant State Assembly and Senate races. It will conclude by discussing what Hudson’s coalition means for the formation of progressive coalitions in the city.
 
 ## The District
 
-District 35 occupies the northwestern edge of Black central Brookly adjacent to long-gentrified Park Slope. It is  just East of the historic but now-blurring dividing line between white and Black Brooklyn. Its western edge runs down Flatbush Avenue through Prospect Heights and then cuts east through Crown Heights along Empire Boulevard as its southern border. The Brownstone district falls in the top quintile of NYC Council districts in rate of higher education and in the second highest quintile in both White and Black share of the population. Much of the Black population is of West Indian origin, it is in the top quintile of West Indian born residents. It is also in the top quintile of white transplants, measured as white population born outside of New York State, and many of its neighborhoods, especially those in the central and southern part of the district, have the reputation of being rapidly gentrifying. It also has a sizable Hasidic population, the Chabad-Lubavitch, though this population is partially split by Empire Boulevard into the 40th Council District. It relatively few Asian and Hispanic residents and is in the middle in terms of income, though, as with education, this masks much diversity, and the election districts (EDs) containing public housing in the northern part of the 35th are among the poorest and least educated in the city.
+District 35 occupies the northwestern edge of Black central Brooklyn adjacent to long-gentrified Park Slope. It is just East of the historic but now-blurring dividing line between white and Black Brooklyn. Its western edge runs down Flatbush Avenue through Prospect Heights and then cuts east through Crown Heights along Empire Boulevard as its southern border. The Brownstone district falls in the top quintile of NYC Council districts in rate of higher education and in the second highest quintile in both White and Black share of the population. Much of the Black population is of West Indian origin, it is in the top quintile of West Indian born residents. It is also in the top quintile of white transplants, measured as white population born outside of New York State, and many of its neighborhoods, especially those in the central and southern part of the district, have the reputation of being rapidly gentrifying. It also has a sizable Hasidic population, the Chabad-Lubavitch, though this population is partially split by Empire Boulevard into the 40th Council District. It relatively few Asian and Hispanic residents and is in the middle in terms of income, though, as with education, this masks much diversity, and the election districts (EDs) containing public housing in the northern part of the 35th are among the poorest and least educated in the city.
 
 The district belonged to cluster three in the demographic classification developed in chapter two, along with districts such as Lincoln Restler’s and Shahana Hanif’s, that mix high-income, mainly white sections with more racially diverse and mid- and lower-income sections. The district is heavily Democratic. It sits in the 9^th^ congressional district, which is D+32 on the Cook Political Index. Joe Biden won the 35th by an 85% margin in the 2020 election (though there was significant Trump support in the Hasidic section of the neighborhood).
 
@@ -389,13 +389,11 @@ This demographic breakdown offers a fascinating look at DSA support. The differe
 
 ## Conclusion
 
-The 35th council district is a diverse district, representing many of the biggest changes to NYC demographics and politics. It features large white and Black populations, with many in-group differences in those larger racial categories. It features newcomers and long-time residents, and it has a large spectrum of income and education. Crystal Hudson’s winning coalition managed to win completely the large Hasidic bloc in the southeast of the district, as well as pick several high-income, highly educated white neighborhoods off of the DSA coalition in the area just north of Grand Army Plaza. 
+The 35th council district is a diverse district, representing many of the biggest changes to NYC demographics and politics. It features large white and Black populations, with many in-group differences in those larger racial categories. It features newcomers and long-time residents, and it has a large spectrum of income and education. Crystal Hudson’s winning coalition managed to win completely the large Hasidic bloc in the southeast of the district, as well as pick several high-income, highly educated white neighborhoods off of the DSA coalition in the area just north of Grand Army Plaza.
 
-This has important implications for the process of coaltion formation. First, it offers some evidence for differential demographic support for certain types of progressives. In this case, DSA support did in fact seem to come from white newcomers. High-income liberal whites might be counted on to join a progressive coalition, but with a preference for more traditional, party endorsed Democrats, whereas highly educated middle-income whites may be the ideal demographic pocket for further left progressives. 
-Second, the election reminds us that conservative blocs are important. If the Hasidic self-reported numbers are close to correct, Holllingsworth could have kept the entire Brisport and Suffrant coalition intact and still lost the race, almost entirely because of his stance on Israel (which, to state the obvious, does not fall within the jurisdiction of the New York City Council). Even a reduction in fervor over his stances on this issue might have reduced turnout and put him closer to the council. This offers a difficult picture for the DSA’s twin stances of ideological purity and outsider campaign status. 
+This has important implications for the process of coaltion formation. First, it offers some evidence for differential demographic support for certain types of progressives. In this case, DSA support did in fact seem to come from white newcomers. High-income liberal whites might be counted on to join a progressive coalition, but with a preference for more traditional, party endorsed Democrats, whereas highly educated middle-income whites may be the ideal demographic pocket for further left progressives. This fits with the city-wide regression analysis done in Chapter 2. Second, the election reminds us that conservative blocs are important. If the Hasidic self-reported numbers are close to correct, Holllingsworth could have kept the entire Brisport and Suffrant coalition intact and still lost the race, almost entirely because of his stance on Israel (which, to state the obvious, does not fall within the jurisdiction of the New York City Council). Even a reduction in fervor over his stances on this issue might have reduced turnout and put him closer to the council. This offers a difficult picture for the DSA’s twin stances of ideological purity and outsider campaign status.
 
 Finally, how do the issues at play in this election affect actual policies? How much does the difference between the two leading candidates and the victory of the one receiving more support from affluent whites matter to the production of progressive policy? It matters quite a lot to those in the DSA section of the coalition, and they continue to see their job in city politics as slowly building a power structure to rival the current Democratic establishment. They think that nothing will fundamentally change for working-class New Yorkers until they break the gravitational pull of business as usual. As evidence for this view they would cite Hudson’s affirmative vote on the most recent budget vote, lending consent to Mayor Adam’s budget cuts. From a more traditional progressive perspective, however, Hudson has been a reliable supporter on the post-split progressive caucus and her yes vote on the budget, echoing that of the vast majority of her colleagues, made no difference to its passage. One way to state the difference between these two camps might be how they view political time. The DSA sees its mission in many election cycles, building a new base of political power. The opposing perspective is more concerned with political production in the shorter term. Subsequent chapters will continue to explore this fault line.
-
 
 \clearpage
 
