--- a/notebooks/district_39.ipynb
+++ b/notebooks/district_39.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\samtg\\AppData\\Local\\Temp\\ipykernel_24312\\1921258042.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\samtg\\AppData\\Local\\Temp\\ipykernel_30412\\1921258042.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "Name: vote, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2197,6 +2197,268 @@
     "mod3 = sm.OLS(target,sm.add_constant(jb_corr[['log_mhhi21','cvap21bapp','jb_vote','bang21p']])).fit()\n",
     "mod4 = sm.OLS(target,sm.add_constant(jb_corr[['log_mhhi21','cvap21bapp','jb_vote','bang21p','w2emrp','w2admp','w2cossp','w2docp']])).fit()\n",
     "summary_col([mod1,mod2,mod3,mod4],stars=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EFA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import FactorAnalysis\n",
+    "from sklearn.decomposition import PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vote_share</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>vote_share</th>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nha21p</th>\n",
+       "      <td>0.351654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nhb21p</th>\n",
+       "      <td>0.271737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ind21p</th>\n",
+       "      <td>0.251221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>garcia213p</th>\n",
+       "      <td>0.239686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2emrp</th>\n",
+       "      <td>0.233770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bang21p</th>\n",
+       "      <td>0.233566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2admp</th>\n",
+       "      <td>0.223468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2docp</th>\n",
+       "      <td>0.214686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dpp20bs</th>\n",
+       "      <td>0.180281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2banp</th>\n",
+       "      <td>0.128900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cvap21bapp</th>\n",
+       "      <td>0.117314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2tranp</th>\n",
+       "      <td>0.112587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2cmp</th>\n",
+       "      <td>0.096740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2scip</th>\n",
+       "      <td>0.095930</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2prodp</th>\n",
+       "      <td>0.064417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2mgtp</th>\n",
+       "      <td>0.055512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2ffp</th>\n",
+       "      <td>0.049399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2conp</th>\n",
+       "      <td>0.039881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2aep</th>\n",
+       "      <td>0.030504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2htp</th>\n",
+       "      <td>0.029315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2foodp</th>\n",
+       "      <td>-0.009422</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mhhi21</th>\n",
+       "      <td>-0.020521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2hsp</th>\n",
+       "      <td>-0.029100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2lawp</th>\n",
+       "      <td>-0.038146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2oadp</th>\n",
+       "      <td>-0.040652</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>white_transplant_ratio</th>\n",
+       "      <td>-0.042115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2copp</th>\n",
+       "      <td>-0.079371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2pservep</th>\n",
+       "      <td>-0.086521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2matp</th>\n",
+       "      <td>-0.113822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2edup</th>\n",
+       "      <td>-0.123733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2salep</th>\n",
+       "      <td>-0.158964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2farmp</th>\n",
+       "      <td>-0.213397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2bgp</th>\n",
+       "      <td>-0.228384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>w2cossp</th>\n",
+       "      <td>-0.239049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ed_name</th>\n",
+       "      <td>-0.295645</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        vote_share\n",
+       "vote_share                1.000000\n",
+       "nha21p                    0.351654\n",
+       "nhb21p                    0.271737\n",
+       "ind21p                    0.251221\n",
+       "garcia213p                0.239686\n",
+       "w2emrp                    0.233770\n",
+       "bang21p                   0.233566\n",
+       "w2admp                    0.223468\n",
+       "w2docp                    0.214686\n",
+       "dpp20bs                   0.180281\n",
+       "w2banp                    0.128900\n",
+       "cvap21bapp                0.117314\n",
+       "w2tranp                   0.112587\n",
+       "w2cmp                     0.096740\n",
+       "w2scip                    0.095930\n",
+       "w2prodp                   0.064417\n",
+       "w2mgtp                    0.055512\n",
+       "w2ffp                     0.049399\n",
+       "w2conp                    0.039881\n",
+       "w2aep                     0.030504\n",
+       "w2htp                     0.029315\n",
+       "w2foodp                  -0.009422\n",
+       "mhhi21                   -0.020521\n",
+       "w2hsp                    -0.029100\n",
+       "w2lawp                   -0.038146\n",
+       "w2oadp                   -0.040652\n",
+       "white_transplant_ratio   -0.042115\n",
+       "w2copp                   -0.079371\n",
+       "w2pservep                -0.086521\n",
+       "w2matp                   -0.113822\n",
+       "w2edup                   -0.123733\n",
+       "w2salep                  -0.158964\n",
+       "w2farmp                  -0.213397\n",
+       "w2bgp                    -0.228384\n",
+       "w2cossp                  -0.239049\n",
+       "ed_name                  -0.295645"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vote_corr.sort_values('vote_share', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictors = [\n",
+    "    'log_mhhi21', 'cvap21bapp', 'nhw21p', 'nha21p', 'h21p','nhb21p',\n",
+    "    'domin21p', 'colomb21p','mean_arrests','w2salep',\n",
+    "    'w2cmp', 'w2admp', 'w2hsp', 'w2mgtp', 'w2bgp', 'w2lawp',\n",
+    "    'hh21op','drive_ratio','w2conp','bus_ratio','train_ratio',\n",
+    "    'w2scip','w2emrp','venez21p','femHHH_ratio',\n",
+    "    'w2docp','ldensity','hh21olongp'\n",
+    "]\n",
+    "\n",
+    "X = demo_occ[predictors]"
    ]
   }
  ],
